--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 .primeiro-bloco{
 	background-image: url(https://images.unsplash.com/photo-1541411438265-4cb4687110f2);
+    height: 350px;
+
 }
 
 #bg{
@@ -8,4 +10,36 @@
 
 .alinhamento{
 	margin: 10% 0px;
+}
+
+.texto-quarto-bloco {
+    padding: 40px 50px 20px 50px;
+    font-size: 25px;
+    font-weight: lighter;
+    letter-spacing: 1px;
+    line-height: 35px;
+}
+
+.info {
+	font-size: 25px;
+    font-weight: lighter;
+    letter-spacing: 1px;
+    line-height: 35px;
+    margin: 0px;
+}
+
+.info2 {
+	font-size: 16px;
+    font-weight: lighter;
+    margin: 0px;
+}
+
+.info3{
+	font-size: 17px;
+    font-weight: lighter;
+    margin: 0px;
+}
+
+hr {
+	margin: 40px 0px;
 }
